--- a/Project2_functions/index.html
+++ b/Project2_functions/index.html
@@ -5,6 +5,6 @@
         <script src="JS/main.js"></script>
     </head>
     <body>
-       
+        <button onclick="myFunction()">Click me</button>
     </body>
 </html>
