--- a/Calculator/calculator.html
+++ b/Calculator/calculator.html
@@ -38,9 +38,9 @@
 
                 <button type ="button"  value="0">0</button>
                 <button type ="button" class="decimal function" value=".">.</button>
-                <button type ="button" class="all-clear-function" value="all-clear">AC</button>
+                <button type ="button" class="all-clear function" value="all-clear">AC</button>
 
-                <button type ="button" class="equal-sing-operator" value ="=">=</button>
+                <button type ="button" class="equal-sing operator" value ="=">=</button>
 
 
 
